# tuki

./: .gitignore  CMakeLists.txt  TODO.md  imgui.ini
assets/fontello/: config.json  demo.html
assets/fontello/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
assets/fontello/font/: fontello.eot
data/: cube.geom  hola.txt  red_crate.mtrl
libs/tk/: CMakeLists.txt  README.md
libs/tk/libs/cgltf/: CMakeLists.txt  cgltf.h
libs/tk/libs/glfw/: CMakeLists.txt
libs/tk/libs/glfw/src/: mappings.h
libs/tk/libs/glm/: CMakeLists.txt
libs/tk/libs/glm/glm/: CMakeLists.txt
libs/tk/libs/imgui/: CMakeLists.txt  imconfig.h  imgui_impl_vulkan.cpp
libs/tk/libs/physfs/: CMakeLists.txt
libs/tk/libs/tracy/: CMakeLists.txt  Tracy.hpp  TracyC.h  TracyClient.cpp  TracyD3D11.hpp  TracyD3D12.hpp  TracyEnable.h  TracyLua.hpp  TracyOpenCL.hpp  TracyOpenGL.hpp  TracyVulkan.hpp
libs/tk/libs/wyhash/: CMakeLists.txt
libs/tk/src/: delegate.hpp  pbr.hpp  shader_compiler.cpp  shader_compiler.hpp  tg.cpp  tg.hpp  tk.cpp  tk.hpp  tvk.cpp  tvk.hpp  utils.cpp  utils.hpp  vma.h
shaders/: desc_sets.glsl  generic.vert.glsl  pbr.frag.glsl  pbr.vert.glsl  pbr_uniforms.glsl  vertex_attribs.glsl  vertex_interface.glsl  wireframe.frag.glsl  wireframe.vert.glsl  wireframe_uniforms.glsl
src/: ditor_old.cpp  editor.cpp
